completed most parts of non mobile, still need to fix header

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,9 +39,6 @@ body {
 .wrapperContact {
 	max-width: 1170px;
 	margin: 0 auto;
-	h2 {
-		color: $colorBlueDark;
-	}
 }
 
 
@@ -72,6 +69,7 @@ body {
 			font-weight: 100;
 			font-size: 16px;
 			text-transform: uppercase;
+			letter-spacing: 3px;
 			&:last-child {
 				padding-right: 0;
 			}
@@ -114,6 +112,10 @@ body {
 		span {
 			color: white;
 		}
+		padding-bottom: 18px;
+	}
+	h5 {
+		letter-spacing: 2px;
 	}
 }
 
@@ -405,10 +407,128 @@ body {
 
 
 	// Contact Section
-.contactHeader {
-	margin-top: 400px;
-	text-align: center;
+.contactMain {
+	background: url(../../assets/contact_background.png)$colorOffWhite;
+	background-position: 50% 70%;
+	background-repeat: no-repeat;
+	padding-bottom: 100px;
+	padding-top: 300px;
+	background-size: contain;
 }
+.contactHeader {
+	padding-top: 200px;
+	text-align: center;
+	h4 {
+		color: $colorBlueDark;
+		font-weight: 100;
+		letter-spacing: 3px;
+		text-transform: uppercase;
+		font-size: 22px;
+	}
+}
+
+.contactMain form {
+	width: 700px;
+	margin: 0 auto;
+	margin-top: 50px;
+	input, textarea {
+		width: 100%;
+		border: 1px solid #f0f0f0;
+		padding: 10px;
+		margin: 10px;
+		font-family: $primaryFont;
+		font-weight: 100;
+	}
+	input[type="submit"] {
+		width: initial;
+		padding: 10px 20px;
+		background: $colorGold;
+		letter-spacing: 3px;
+	}
+}
+
+.contactForm__container {
+	display: flex;
+}
+
+.contactForm__container--inputs {
+	width: 80%;
+}
+
+.contactForm__container--info {
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	ul {
+		padding-left: 0;
+	}
+}
+
+.contactForm__container--info li {
+	list-style: none;
+	color: #9f9f9f;
+	font-family: $primaryFont;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	padding: 15px 0;
+	&:nth-child(1):before {
+		font-family: FontAwesome;
+		content: "\f003";
+		padding-right: 10px;
+	}
+	&:nth-child(2):before {
+		font-family: FontAwesome;
+		content: "\f041";
+		padding-right: 10px;
+	}
+	&:nth-child(3):before {
+		font-family: FontAwesome;
+		content: "\f1ac";
+		padding-right: 10px;
+	}
+	&:nth-child(4) {
+		display: flex;
+	}
+}
+
+.contactForm__container--info p {
+	color: $colorBlueDark;
+	padding: 6px 0;
+	text-transform: none;
+}
+
+.socialLinks {
+	color: $colorGold;
+	padding: 10px;
+	background: $colorBlueDark;
+	margin-right: 10px;
+}
+
+.socialLinks i {
+	font-size: 30px;
+}
+
+
+
+
+
+
+	// Footer
+footer {
+	background: $colorOffWhite;
+	border-top: 1px solid #eaeaea;
+}
+footer p {
+	color: #9f9f9f;
+	padding: 30px;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	text-align: center;
+	font-style: 12px;
+}
+
+
 
 
 
